			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.2812 2006/02/01 06:27:24 jinmei Exp $

<200602>
2006-02-01  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* freebsd5/sys/kern/uipc_mbuf.c (m_pullup): fixed memory leak when
	the original mbuf had an mtag and the pull-up operation required
	allocating a new mbuf.
	Reported by: Garfield Hsieh

<200601>
2006-01-15  SUZUKI, Shinsuke <suz@alaxala.net>
	* kame/sys/netinet6/{icmp6.c, in6.[ch]}: not reply an ICMPv6 Error
	message for a packet from an obvious anycast address.

2006-01-09  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* freebsd5/sys/netinet6/in6_pcb.c (in6_{set,peer}sockaddr):
	converted embedded scope zone IDs into the sin6_scope_id field
	appropriately.
	Reported by: Susan.Lan

<200511>
2005-11-29  Tsuyoshi MOMOSE  <momose@az.jp.nec.com>
	* kame/kame/shisad, kame/sys/netinet6/{mip6.c,nd6_nbr.c}:
	Proxy DAD on a home agent is supported.

<200510>
2005-10-17  SUZUKI, Shinsuke <suz@alaxala.net>
	* kame/kame/rtadvd/config.c, rtadvd.[ch]: not reinitialize
	the host-variables in kernel to the ones at the start-up time,
	since RA is a stateless autoconfiguration protocol.
	Suggested by: Hideaki YOSHIFUJI

2005-10-15  SUZUKI, Shinsuke <suz@alaxala.net>
	* kame/sys/netinet6/mldv2.c: fixed a MLDv2-kernel crash when 
	  an inappropriate address is given to IPV6_JOIN_GROUP API

2005-10-15  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* raw_ip6.c (rip6_attach): caught failure of MALLOC for
	icmp6_filter.  The old code could dereference to a NULL pointer in
	the failure case.

2005-10-08  SUZUKI, Shinsuke <suz@alaxala.net>
	* removed the following multicast-related programs, since they are 
	  now maintained/developed/released in mcast-tools project.
		pim6sd (including mtrace6) pim6dd mfc mcastsend mcastread pmsft

<200509>
Tue Sep 20 14:09:07 JST 2005	keiichi@iijlab.net
	*kame/{free|net}bsd/lib/libipsec
	stop installing libipsec.  The main user of the library was