@@ -1,7 +1,13 @@
 			CHANGELOG for KAME kit
-$KAME: CHANGELOG,v 1.2812 2006/02/01 06:27:24 jinmei Exp $
+$KAME: CHANGELOG,v 1.2813 2006/02/11 06:11:29 suz Exp $
 
 <200602>
+2006-02-11  SUZUKI, Shinsuke <suz@alaxala.net>
+	* kame/sys/netinet6/mldv2.c (mld_state_change_report)
+	fixed a bug that no MLDv2 report is advertised when host state changes 
+	from IN/EX to EX/IN, respectively.
+	Reported by: Yu-Jung Lee
+
 2006-02-01  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
 	* freebsd5/sys/kern/uipc_mbuf.c (m_pullup): fixed memory leak when
 	the original mbuf had an mtag and the pull-up operation required
